remove compilation warnings under java 11